Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10839

Startup shell folder does not work.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.10
    • Shell

    Description

      Initial condition is a working installation of ReactOS.
      Go into "Start Menu\Programs\StartUp" folder (this path could change, it depends on your language).

      Experiment 1:
      Create here a shortcut to an application, for example the notepad.
      Restart ReactOS: you would expect that notepad is launched immediately after reboot, but it does not. Instead, it prints a messagebox saying that there is not an application associated with this type of file.

      Experiment 2:
      Delete the previously created shortcut and this time copy directly notepad.exe in the StartUp folder.
      Restart ReactOS: no message is printed and notepad is still not launched.

      BUT: if you try to run the shortcuts and the applications you stored in the StartUp folder by launching from the Start menu, they will work.

      In my opinion, in base\system\userinit is missing the COM initialization.
      The first step would be to add a CoInitializeEx() and add link to OLE32 in the cmake file. But I have the suspect that there is something wrong elsewhere, because ShellExecuteEx() was returning success instead of failure and this is quite incomprehensible to me.

      Attachments

        Issue Links

          Activity

            People

              hbelusca hbelusca
              Carlo Bramix Carlo Bramix
              Votes:
              4 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: