[USERINIT][EXPLORER] Fix auto startup of Start Menu (#594)

- Remove code for Start-Menu auto-startup items from userinit and put it where it belongs: in explorer.

CORE-10839